--- a/TODO.txt
+++ b/TODO.txt
@@ -4,5 +4,8 @@
 
 # TOTHINK
 - Think about new rocket engine design (angle + power | 2 bodies, force to second + rotation | joint)
-- Think about waiting 3-5 sec before green light
+- Think about waiting 3-5 sec before green light ***
 - Add dist to wings (to fix the bug when all velocity stops by wing, and landing is ok)
+- Add in main class field self.win and report it ***
+
+*** done, need to test
