--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ ______________________________________________
 # TODO
 ______________________________________________
 - External control and reading status through named pipe (fifo, socket) -> class() ***
+- https://docs.python.org/2/library/socket.html ***
 - AI module (maybe reinforcement learning or something else)
 ______________________________________________
 # TOTHINK
@@ -12,9 +13,16 @@ ______________________________________________
 - Add dist to wings (to fix the bug when all velocity stops by wing, and landing is ok)
 - Add in main class field self.win and report it ***
 - http://stackoverflow.com/questions/13524039/friction-between-moving-static-body-and-dynamic-body -> no friction bug ***
+- #
 - http://stackoverflow.com/questions/6613022/box2d-colission-between-static-dynamic-bodies-causing-an-assert -> error collision
+- http://www.iforce2d.net/b2dtut/collision-anatomy
+- http://www.iforce2d.net/b2dtut/collision-callbacks
+- http://pybox2d.googlecode.com/svn/doc/doxygen/html_output/functions_0x69.html
+- Use real fixture contacts, not AABB as we used | hack =(
+- #
+- Add penalty to durability depending on the fuel balance
 - Sprites, graphics
 ______________________________________________
-*** done, need to test
+*** done | done and need to test
 ______________________________________________
 
