--- a/TODO.txt
+++ b/TODO.txt
@@ -10,7 +10,7 @@ ______________________________________________
 - Think about new rocket engine design (angle + power | 2 bodies, force to second + rotation | joint)
 - More realistic design (look real sizes etc.)
 - Think about waiting 3-5 sec before green light ***
-- Add dist to wings (to fix the bug when all velocity stops by wing, and landing is ok)
+- Add dist to wings (to fix the bug when all velocity stops by wing, and landing is ok) (min(dist1, dist2))
 - Add in main class field self.win and report it ***
 - http://stackoverflow.com/questions/13524039/friction-between-moving-static-body-and-dynamic-body -> no friction bug ***
 - #
